Adding validation about the agent load capacity and the supply requested volume.

--- a/src/agentspeak/Jason/readme
+++ b/src/agentspeak/Jason/readme
@@ -42,7 +42,7 @@ MAS Scenario {
 		collectPoint1 collect_point [beliefs="pose(7,8)"];
 		rescuePoint1 rescue_point [beliefs="pose(10,11)"];
 		hospital1 hospital [beliefs="pose(18,19)"];
-		deliveryAgent1 delivery_agent [beliefs="pose(0,0)"];
+		deliveryAgent1 delivery_agent [beliefs="pose(0,0), loadCapacity(100)"];
 		ambulanceAgent1 ambulance_agent [beliefs="pose(0,0)"];
 		
 	aslSourcePath:
